--- a/Presentacion .Rmd
+++ b/Presentacion .Rmd
@@ -2,6 +2,8 @@
 title: "*Regresión local (LOESS)*"
 author:  "Angie Rodríguez Duque & César Saavedra Vanegas"
 date: "Septiembre 2020"
+csl: vancouver.csl
+bibliography: referencias.bib
 output:
   ioslides_presentation:
     widescreen: true 
@@ -112,3 +114,10 @@ geom_text(aes(label = "span = 0.7", x = 400, y = 35), size = 5,
 
 <div/>
 
+
+# Bibliografía
+##
+<div style="text-align: justify">
+
+
+<div/>
