--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -6,3 +6,10 @@
   year={1992},
   publisher={Wadsworth \& Brooks/Cole New York, Ch}
 }
+
+@book{ortiz2005modelamiento,
+  title={Modelamiento estad{\'\i}stico},
+  author={Ortiz, Jorge and Montenegro, {\'A}lvaro},
+  year={2005},
+  publisher={Univ. Nacional de Colombia}
+}
