--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -13,3 +13,11 @@
   year={2005},
   publisher={Univ. Nacional de Colombia}
 }
+
+@book{james2013introduction,
+  title={An introduction to statistical learning},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  volume={112},
+  year={2013},
+  publisher={Springer}
+}
