--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -21,3 +21,10 @@
   year={2013},
   publisher={Springer}
 }
+
+@book{loader2006local,
+  title={Local regression and likelihood},
+  author={Loader, Clive},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
